--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@huggingface/transformers": "^3.2.4",
+    "@jsquash/avif": "^2.0.0",
+    "@jsquash/jpeg": "^1.4.0",
+    "@jsquash/jxl": "^1.1.0",
+    "@jsquash/png": "^3.0.1",
+    "@jsquash/webp": "^1.4.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
